/*
 * $Id: ChangeLog,v 1.3736 2005/01/13 04:41:18 bdj Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2005-01-13 11:30 UTC+0700 Budyanto Dj. <budyanto@centrin.net.id>
  * contrib/gtwvw/gtwvw.c
  * contrib/gtwvw/hbgtwvw.c
  * contrib/gtwvw/doc/whatsnew.txt
    + Combobox functions and some other changes.
      Please see details in the changelog on contrib/gtwvw/doc/whatsnew.txt
      starting at change date 2005-11-25.
      And one important note:
      Andi Jahja has made revisions to gtwvw that it is now compileable
      by MSVC/OW/PellesC/XCC/MinGW32. Thanks!!!.

  * contrib/gtwvw/samples/wvwtest9.bat
  * contrib/gtwvw/samples/wvwtest9.bc
    * Some typo fixed.

2005-01-12 20:30 UTC-0800 Ron Pinkas <ron at xharbour.com>
  * source/compiler/hbslex.c
    * Minor correction for xCC

2004-01-12 17:35 UTC+0100 Przemyslaw Czerpak (druzus/at/priv.onet.pl)
  * xharbour/make_gnu.sh
    * fixed DJGPP name
    * modified BSD detection for GNU make

  * xharbour/make_rpm.sh
  * xharbour/make_tgz.sh
    * formatting

  * xharbour/xharbour.spec
    * fixed gpl switch for HB_COMMERCE

  * xharbour/make_xmingw.sh
    * redirect also stderr to /dev/null in which

  * xharbour/bin/pack_src.sh
    * fixed small typo

  * xharbour/config/linux/owatcom.cf
    * modified for compilation without any libraries

  * xharbour/config/w32/mingw32.cf
    * fixed small typo
    * minor modification for COMMAND.COM use

  * xharbour/include/hbsetup.h
    * restored small comment I removed

  * xharbour/source/common/hbtrace.c
    * formatting

  * xharbour/source/rtl/filesys.c
    * removed HB_FS_DRIVE_LETTER - OS_HAS_DRIVE_LETTER should be used

  * xharbour/source/rtl/mod.c
    ! fixed bug in mod(a,b) when a/b exceeds LONG limit

  * xharbour/source/rtl/gtsln/kbsln.c
    * minor modification
